# agent-manager-x

./: .gitignore  AgentManagerX_2.6_aarch64.md  CLAUDE.md  DECISIONS.md  DEV.md  Makefile  PROGRESS.md  QUICKSTART.md  README.md  STATUS_DETECTION_NOTES.md  TODO-session-detection.md  TODOS.md  XCODE_COMMANDS.md  appcast-x64.xml  appcast.xml  changelog.md  electrobun.config.ts  index.html  new_req.md  package-lock.json  package.json  pnpm-lock.yaml  project.yml  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/Assets.xcassets/AppIcon.appiconset/: Contents.json
src-tauri/capabilities/: default.json
src-tauri/native-mini-viewer/: MiniViewer.swift
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/agent/: claude.rs  mod.rs
src-tauri/src/agent/codex/: mod.rs  process.rs  session.rs  types.rs
src-tauri/src/agent/opencode/: builder.rs  message.rs  mod.rs  process.rs  project.rs  session.rs  types.rs
src-tauri/src/commands/handlers/: bell_mode.rs  debug.rs  editor.rs  mini_viewer.rs  mod.rs  notification_check.rs  notification_install.rs  notification_scripts.rs  notification_uninstall.rs  notification_utils.rs  process.rs  session.rs  shortcut.rs  tray.rs
src-tauri/src/process/: claude.rs  mod.rs  system.rs
src-tauri/src/session/: mod.rs  model.rs  status.rs
src-tauri/src/session/parser/: jsonl_files.rs  (+7 more)
src-tauri/src/terminal/: mod.rs
src-tauri/src/tests/: mod.rs  parser_tests.rs  path_tests.rs  session_tests.rs  status_priority_tests.rs  status_stale_tests.rs  status_tests.rs  test_helpers.rs  tool_helper_tests.rs
(+144 files in other folders)
