[package]
name = "agent-manager-x"
version = "1.2.1"
description = "Agent Manager X - Monitor and manage AI coding agents"
authors = ["maddada"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_manager_x_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
dirs = "5.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-window-state = "2"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
once_cell = "1.19"
rusqlite = { version = "0.31", features = ["bundled"] }
core-foundation = "0.10.1"
core-graphics = "0.24.0"
libloading = "0.8.9"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
